parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSOLUTE
    AMPERSANT
    ASM
    AT
    BUCKS
    CONSTRUCTOR
    DESTRUCTOR
    DIGIT
    DIVIDEEQUAL
    HASHTAG
    IMPLEMENTATION
    INHERITED
    INLINE
    INTERFACE
    LBLOCK
    MINUSEQUAL
    OBJECT
    OPERATOR
    PERCENT
    PLUSEQUAL
    RBLOCK
    REINTRODUCE
    SELF
    SHL
    SHR
    STRING
    TIMESEQUAL
    UNIT
    USES
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> program_heading block DOT
Rule 2     program_heading -> PROGRAM identifier SEMICOLON
Rule 3     program_heading -> PROGRAM identifier LPAREN identifier_list RPAREN SEMICOLON
Rule 4     block -> declaration_part statement_part
Rule 5     declaration_part -> label_declaration_part procedure_and_function_declaration_part
Rule 6     declaration_part -> label_declaration_part constant_definition_part procedure_and_function_declaration_part
Rule 7     declaration_part -> label_declaration_part type_definition_part procedure_and_function_declaration_part
Rule 8     declaration_part -> label_declaration_part variable_declaration_part procedure_and_function_declaration_part
Rule 9     declaration_part -> label_declaration_part constant_definition_part type_definition_part procedure_and_function_declaration_part
Rule 10    declaration_part -> label_declaration_part constant_definition_part type_definition_part variable_declaration_part procedure_and_function_declaration_part
Rule 11    declaration_part -> label_declaration_part constant_definition_part variable_declaration_part procedure_and_function_declaration_part
Rule 12    declaration_part -> label_declaration_part type_definition_part variable_declaration_part procedure_and_function_declaration_part
Rule 13    declaration_part -> constant_definition_part procedure_and_function_declaration_part
Rule 14    declaration_part -> constant_definition_part type_definition_part procedure_and_function_declaration_part
Rule 15    declaration_part -> constant_definition_part variable_declaration_part procedure_and_function_declaration_part
Rule 16    declaration_part -> constant_definition_part type_definition_part variable_declaration_part procedure_and_function_declaration_part
Rule 17    declaration_part -> type_definition_part procedure_and_function_declaration_part
Rule 18    declaration_part -> type_definition_part variable_declaration_part procedure_and_function_declaration_part
Rule 19    declaration_part -> procedure_and_function_declaration_part
Rule 20    label_declaration_part -> LABEL label_list SEMICOLON
Rule 21    label_list -> label
Rule 22    label_list -> label_list COMMA label
Rule 23    constant_definition_part -> CONST constant_definition_list SEMICOLON
Rule 24    constant_definition_list -> constant_definition
Rule 25    constant_definition_list -> constant_definition_list SEMICOLON constant_definition
Rule 26    constant_definition -> identifier EQUAL constant
Rule 27    type_definition_part -> TYPE type_definition_list SEMICOLON
Rule 28    type_definition_list -> type_definition
Rule 29    type_definition_list -> type_definition_list SEMICOLON type_definition
Rule 30    type_definition -> identifier EQUAL type
Rule 31    variable_declaration_part -> VAR variable_declaration_list SEMICOLON
Rule 32    variable_declaration_list -> variable_declaration
Rule 33    variable_declaration_list -> variable_declaration_list SEMICOLON variable_declaration
Rule 34    variable_declaration -> identifier_list COLON type
Rule 35    procedure_and_function_declaration_part -> procedure_declaration SEMICOLON
Rule 36    procedure_and_function_declaration_part -> function_declaration SEMICOLON
Rule 37    procedure_declaration -> procedure_heading SEMICOLON procedure_body
Rule 38    procedure_declaration -> procedure_heading SEMICOLON directive
Rule 39    procedure_declaration -> procedure_identification SEMICOLON procedure_body
Rule 40    procedure_body -> block
Rule 41    function_declaration -> function_heading SEMICOLON function_body
Rule 42    function_declaration -> function_heading SEMICOLON directive
Rule 43    function_declaration -> function_identification SEMICOLON function_body
Rule 44    function_body -> block
Rule 45    directive -> FORWARD
Rule 46    statement_part -> BEGIN statement_sequence END
Rule 47    procedure_heading -> PROCEDURE identifier
Rule 48    procedure_heading -> PROCEDURE identifier formal_parameter_list
Rule 49    function_heading -> FUNCTION identifier COLON result_type
Rule 50    function_heading -> FUNCTION identifier formal_parameter_list COLON result_type
Rule 51    result_type -> type_identifier
Rule 52    procedure_identification -> PROCEDURE procedure_identifier
Rule 53    function_identification -> FUNCTION function_identifier
Rule 54    formal_parameter_list -> LPAREN formal_parameter_section_list RPAREN
Rule 55    formal_parameter_section_list -> formal_parameter_section
Rule 56    formal_parameter_section_list -> formal_parameter_section_list SEMICOLON formal_parameter_section
Rule 57    formal_parameter_section -> value_parameter_section
Rule 58    formal_parameter_section -> variable_parameter_section
Rule 59    formal_parameter_section -> procedure_parameter_section
Rule 60    formal_parameter_section -> function_parameter_section
Rule 61    value_parameter_section -> identifier_list COLON parameter_type
Rule 62    variable_parameter_section -> VAR identifier_list COLON parameter_type
Rule 63    procedure_parameter_section -> procedure_heading
Rule 64    function_parameter_section -> function_heading
Rule 65    parameter_type -> type_identifier
Rule 66    parameter_type -> conformant_array_schema
Rule 67    conformant_array_schema -> packed_conformant_array_schema
Rule 68    conformant_array_schema -> unpacked_conformant_array_schema
Rule 69    packed_conformant_array_schema -> PACKED ARRAY LBRACKET bound_specification RBRACKET OF type_identifier
Rule 70    unpacked_conformant_array_schema -> ARRAY LBRACKET bound_specification_list RBRACKET OF type_identifier
Rule 71    unpacked_conformant_array_schema -> ARRAY LBRACKET bound_specification_list RBRACKET OF conformant_array_schema
Rule 72    bound_specification_list -> bound_specification
Rule 73    bound_specification_list -> bound_specification_list SEMICOLON bound_specification
Rule 74    bound_specification -> identifier RANGE_OPERATOR identifier SEMICOLON ordinal_type_identifier
Rule 75    ordinal_type_identifier -> type_identifier
Rule 76    statement_sequence -> statement
Rule 77    statement_sequence -> statement SEMICOLON statement
Rule 78    statement -> label COLON simple_statement
Rule 79    statement -> label COLON structured_statement
Rule 80    statement -> simple_statement
Rule 81    statement -> structured_statement
Rule 82    simple_statement -> assignment_statement
Rule 83    simple_statement -> procedure_statement
Rule 84    simple_statement -> goto_statement
Rule 85    assignment_statement -> variable ASSIGN expression
Rule 86    assignment_statement -> function_identifier ASSIGN expression
Rule 87    procedure_statement -> procedure_identifier
Rule 88    procedure_statement -> procedure_identifier actual_parameter_list
Rule 89    goto_statement -> GOTO label
Rule 90    structured_statement -> compound_statement
Rule 91    structured_statement -> repetitive_statement
Rule 92    structured_statement -> conditional_statement
Rule 93    structured_statement -> with_statement
Rule 94    compound_statement -> BEGIN statement_sequence END
Rule 95    repetitive_statement -> while_statement
Rule 96    repetitive_statement -> repeat_statement
Rule 97    repetitive_statement -> for_statement
Rule 98    while_statement -> WHILE expression DO statement
Rule 99    repeat_statement -> REPEAT statement_sequence UNTIL expression
Rule 100   for_statement -> FOR variable_identifier ASSIGN initial_expression TO final_expression DO statement
Rule 101   for_statement -> FOR variable_identifier ASSIGN initial_expression DOWNTO final_expression DO statement
Rule 102   initial_expression -> expression
Rule 103   final_expression -> expression
Rule 104   conditional_statement -> if_statement
Rule 105   conditional_statement -> case_statement
Rule 106   if_statement -> IF expression THEN statement
Rule 107   if_statement -> IF expression THEN statement ELSE statement
Rule 108   case_statement -> CASE expression OF case_limb_list END
Rule 109   case_statement -> CASE expression OF case_limb_list SEMICOLON END
Rule 110   case_limb_list -> case_limb
Rule 111   case_limb_list -> case_limb_list SEMICOLON case_limb
Rule 112   case_limb -> case_label_list COLON statement
Rule 113   case_label_list -> constant
Rule 114   case_label_list -> case_label_list COMMA constant
Rule 115   with_statement -> WITH record_variable_list DO statement
Rule 116   record_variable_list -> record_variable
Rule 117   record_variable_list -> record_variable_list COMMA record_variable
Rule 118   actual_parameter_list -> LPAREN actual_parameter_list2 RPAREN
Rule 119   actual_parameter_list2 -> actual_parameter
Rule 120   actual_parameter_list2 -> actual_parameter_list2 COMMA actual_parameter
Rule 121   actual_parameter -> actual_value
Rule 122   actual_parameter -> actual_variable
Rule 123   actual_parameter -> actual_procedure
Rule 124   actual_parameter -> actual_function
Rule 125   actual_value -> expression
Rule 126   actual_procedure -> procedure_identifier
Rule 127   actual_function -> function_identifier
Rule 128   expression -> simple_expression
Rule 129   expression -> simple_expression relational_operator simple_expression
Rule 130   simple_expression -> sign term_list
Rule 131   simple_expression -> term_list
Rule 132   term_list -> term
Rule 133   term_list -> term_list addition_operator term
Rule 134   term -> factor
Rule 135   term -> term multiplication_operator factor
Rule 136   factor -> variable
Rule 137   factor -> number
Rule 138   factor -> string
Rule 139   factor -> set
Rule 140   factor -> NIL
Rule 141   factor -> constant_identifier
Rule 142   factor -> bound_identifier
Rule 143   factor -> function_designator
Rule 144   factor -> LPAREN expression RPAREN
Rule 145   factor -> NOT factor
Rule 146   relational_operator -> EQUAL
Rule 147   relational_operator -> NOTEQUAL
Rule 148   relational_operator -> LESS
Rule 149   relational_operator -> LESSEQUAL
Rule 150   relational_operator -> GREATER
Rule 151   relational_operator -> GREATEREQUAL
Rule 152   relational_operator -> IN
Rule 153   addition_operator -> PLUS
Rule 154   addition_operator -> MINUS
Rule 155   addition_operator -> OR
Rule 156   multiplication_operator -> TIMES
Rule 157   multiplication_operator -> DIVIDE
Rule 158   multiplication_operator -> DIV
Rule 159   multiplication_operator -> MOD
Rule 160   multiplication_operator -> AND
Rule 161   variable -> entire_variable
Rule 162   variable -> component_variable
Rule 163   variable -> referenced_variable
Rule 164   entire_variable -> variable_identifier
Rule 165   entire_variable -> field_identifier
Rule 166   component_variable -> indexed_variable
Rule 167   component_variable -> field_designator
Rule 168   component_variable -> file_buffer
Rule 169   indexed_variable -> array_variable LBRACKET expression_list RBRACKET
Rule 170   field_designator -> record_variable DOT field_identifier
Rule 171   set -> LBRACKET element_list RBRACKET
Rule 172   element_list -> <empty>
Rule 173   element_list -> expression_list
Rule 174   function_designator -> function_identifier
Rule 175   function_designator -> function_identifier actual_parameter_list
Rule 176   file_buffer -> file_variable UPARROW
Rule 177   type -> simple_type
Rule 178   type -> structured_type
Rule 179   type -> pointer_type
Rule 180   type -> type_identifier
Rule 181   simple_type -> subrange_type
Rule 182   simple_type -> enumerated_type
Rule 183   enumerated_type -> LPAREN identifier_list RPAREN
Rule 184   subrange_type -> lower_bound RANGE_OPERATOR upper_bound
Rule 185   lower_bound -> constant
Rule 186   upper_bound -> constant
Rule 187   structured_type -> PACKED unpacked_structured_type
Rule 188   structured_type -> unpacked_structured_type
Rule 189   unpacked_structured_type -> array_type
Rule 190   unpacked_structured_type -> record_type
Rule 191   unpacked_structured_type -> set_type
Rule 192   unpacked_structured_type -> file_type
Rule 193   array_type -> ARRAY LBRACKET index_type_list RBRACKET OF element_type
Rule 194   index_type_list -> index_type
Rule 195   index_type_list -> index_type_list COMMA index_type
Rule 196   index_type -> simple_type
Rule 197   element_type -> type
Rule 198   record_type -> RECORD field_list END
Rule 199   set_type -> SET OF base_type
Rule 200   base_type -> type
Rule 201   file_type -> FILE OF file_component_type
Rule 202   file_component_type -> type
Rule 203   pointer_type -> UPARROW type_identifier
Rule 204   field_list -> <empty>
Rule 205   field_list -> fixed_part
Rule 206   field_list -> fixed_part SEMICOLON variant_part
Rule 207   field_list -> fixed_part SEMICOLON variant_part SEMICOLON
Rule 208   field_list -> variant_part
Rule 209   field_list -> variant_part SEMICOLON
Rule 210   fixed_part -> record_section
Rule 211   fixed_part -> fixed_part SEMICOLON record_section
Rule 212   record_section -> identifier_list COLON type
Rule 213   variant_part -> CASE tag_field type_identifier OF variant_list
Rule 214   variant_list -> variant
Rule 215   variant_list -> variant_list SEMICOLON variant
Rule 216   tag_field -> <empty>
Rule 217   tag_field -> identifier COLON
Rule 218   variant -> case_label_list SEMICOLON LPAREN field_list RPAREN
Rule 219   output_list -> output_value
Rule 220   output_list -> output_list COMMA output_value
Rule 221   output_value -> expression
Rule 222   output_value -> expression SEMICOLON field_width
Rule 223   output_value -> expression SEMICOLON field_width COLON fraction_length
Rule 224   field_width -> expression
Rule 225   fraction_length -> expression
Rule 226   identifier -> ID
Rule 227   file_variable -> variable
Rule 228   referenced_variable -> pointer_variable UPARROW
Rule 229   record_variable -> variable
Rule 230   pointer_variable -> variable
Rule 231   actual_variable -> variable
Rule 232   array_variable -> variable
Rule 233   field_identifier -> identifier
Rule 234   constant_identifier -> identifier
Rule 235   variable_identifier -> identifier
Rule 236   type_identifier -> identifier
Rule 237   procedure_identifier -> identifier
Rule 238   function_identifier -> identifier
Rule 239   bound_identifier -> identifier
Rule 240   variable_list -> variable
Rule 241   variable_list -> variable_list COMMA variable
Rule 242   identifier_list -> identifier
Rule 243   identifier_list -> identifier_list COMMA identifier
Rule 244   expression_list -> expression
Rule 245   expression_list -> expression_list COMMA expression
Rule 246   number -> integer_number
Rule 247   number -> real_number
Rule 248   integer_number -> digit_sequence
Rule 249   real_number -> digit_sequence DOT
Rule 250   real_number -> digit_sequence DOT digit_sequence
Rule 251   real_number -> digit_sequence DOT digit_sequence scale_factor
Rule 252   real_number -> digit_sequence DOT scale_factor
Rule 253   real_number -> digit_sequence scale_factor
Rule 254   scale_factor -> digit_sequence DOT
Rule 255   scale_factor -> digit_sequence DOT digit_sequence
Rule 256   scale_factor -> digit_sequence DOT digit_sequence scale_factor
Rule 257   scale_factor -> digit_sequence DOT scale_factor
Rule 258   scale_factor -> digit_sequence scale_factor
Rule 259   unsigned_digit_sequence -> digit
Rule 260   unsigned_digit_sequence -> unsigned_digit_sequence digit
Rule 261   digit_sequence -> sign unsigned_digit_sequence
Rule 262   digit_sequence -> unsigned_digit_sequence
Rule 263   sign -> PLUS
Rule 264   sign -> MINUS
Rule 265   letter -> LETTER
Rule 266   digit -> NUMBER
Rule 267   string -> QUOTE string_character_list QUOTE
Rule 268   string_character_list -> string_character
Rule 269   string_character_list -> string_character_list string_character
Rule 270   string_character -> ANY_CHARACTER_EXCEPT_QUOTE
Rule 271   string_character -> SQUOTE SQUOTE
Rule 272   label -> integer_number
Rule 273   constant -> sign constant_identifier
Rule 274   constant -> sign number
Rule 275   constant -> constant_identifier
Rule 276   constant -> number
Rule 277   constant -> string

Terminals, with rules where they appear

ABSOLUTE             : 
AMPERSANT            : 
AND                  : 160
ANY_CHARACTER_EXCEPT_QUOTE : 270
ARRAY                : 69 70 71 193
ASM                  : 
ASSIGN               : 85 86 100 101
AT                   : 
BEGIN                : 46 94
BUCKS                : 
CASE                 : 108 109 213
COLON                : 34 49 50 61 62 78 79 112 212 217 223
COMMA                : 22 114 117 120 195 220 241 243 245
CONST                : 23
CONSTRUCTOR          : 
DESTRUCTOR           : 
DIGIT                : 
DIV                  : 158
DIVIDE               : 157
DIVIDEEQUAL          : 
DO                   : 98 100 101 115
DOT                  : 1 170 249 250 251 252 254 255 256 257
DOWNTO               : 101
ELSE                 : 107
END                  : 46 94 108 109 198
EQUAL                : 26 30 146
FILE                 : 201
FOR                  : 100 101
FORWARD              : 45
FUNCTION             : 49 50 53
GOTO                 : 89
GREATER              : 150
GREATEREQUAL         : 151
HASHTAG              : 
ID                   : 226
IF                   : 106 107
IMPLEMENTATION       : 
IN                   : 152
INHERITED            : 
INLINE               : 
INTERFACE            : 
LABEL                : 20
LBLOCK               : 
LBRACKET             : 69 70 71 169 171 193
LESS                 : 148
LESSEQUAL            : 149
LETTER               : 265
LPAREN               : 3 54 118 144 183 218
MINUS                : 154 264
MINUSEQUAL           : 
MOD                  : 159
NIL                  : 140
NOT                  : 145
NOTEQUAL             : 147
NUMBER               : 266
OBJECT               : 
OF                   : 69 70 71 108 109 193 199 201 213
OPERATOR             : 
OR                   : 155
PACKED               : 69 187
PERCENT              : 
PLUS                 : 153 263
PLUSEQUAL            : 
PROCEDURE            : 47 48 52
PROGRAM              : 2 3
QUOTE                : 267 267
RANGE_OPERATOR       : 74 184
RBLOCK               : 
RBRACKET             : 69 70 71 169 171 193
RECORD               : 198
REINTRODUCE          : 
REPEAT               : 99
RPAREN               : 3 54 118 144 183 218
SELF                 : 
SEMICOLON            : 2 3 20 23 25 27 29 31 33 35 36 37 38 39 41 42 43 56 73 74 77 109 111 206 207 207 209 211 215 218 222 223
SET                  : 199
SHL                  : 
SHR                  : 
SQUOTE               : 271 271
STRING               : 
THEN                 : 106 107
TIMES                : 156
TIMESEQUAL           : 
TO                   : 100
TYPE                 : 27
UNIT                 : 
UNTIL                : 99
UPARROW              : 176 203 228
USES                 : 
VAR                  : 31 62
WHILE                : 98
WITH                 : 115
XOR                  : 
error                : 

Nonterminals, with rules where they appear

actual_function      : 124
actual_parameter     : 119 120
actual_parameter_list : 88 175
actual_parameter_list2 : 118 120
actual_procedure     : 123
actual_value         : 121
actual_variable      : 122
addition_operator    : 133
array_type           : 189
array_variable       : 169
assignment_statement : 82
base_type            : 199
block                : 1 40 44
bound_identifier     : 142
bound_specification  : 69 72 73
bound_specification_list : 70 71 73
case_label_list      : 112 114 218
case_limb            : 110 111
case_limb_list       : 108 109 111
case_statement       : 105
component_variable   : 162
compound_statement   : 90
conditional_statement : 92
conformant_array_schema : 66 71
constant             : 26 113 114 185 186
constant_definition  : 24 25
constant_definition_list : 23 25
constant_definition_part : 6 9 10 11 13 14 15 16
constant_identifier  : 141 273 275
declaration_part     : 4
digit                : 259 260
digit_sequence       : 248 249 250 250 251 251 252 253 254 255 255 256 256 257 258
directive            : 38 42
element_list         : 171
element_type         : 193
entire_variable      : 161
enumerated_type      : 182
expression           : 85 86 98 99 102 103 106 107 108 109 125 144 221 222 223 224 225 244 245
expression_list      : 169 173 245
factor               : 134 135 145
field_designator     : 167
field_identifier     : 165 170
field_list           : 198 218
field_width          : 222 223
file_buffer          : 168
file_component_type  : 201
file_type            : 192
file_variable        : 176
final_expression     : 100 101
fixed_part           : 205 206 207 211
for_statement        : 97
formal_parameter_list : 48 50
formal_parameter_section : 55 56
formal_parameter_section_list : 54 56
fraction_length      : 223
function_body        : 41 43
function_declaration : 36
function_designator  : 143
function_heading     : 41 42 64
function_identification : 43
function_identifier  : 53 86 127 174 175
function_parameter_section : 60
goto_statement       : 84
identifier           : 2 3 26 30 47 48 49 50 74 74 217 233 234 235 236 237 238 239 242 243
identifier_list      : 3 34 61 62 183 212 243
if_statement         : 104
index_type           : 194 195
index_type_list      : 193 195
indexed_variable     : 166
initial_expression   : 100 101
integer_number       : 246 272
label                : 21 22 78 79 89
label_declaration_part : 5 6 7 8 9 10 11 12
label_list           : 20 22
letter               : 
lower_bound          : 184
multiplication_operator : 135
number               : 137 274 276
ordinal_type_identifier : 74
output_list          : 220
output_value         : 219 220
packed_conformant_array_schema : 67
parameter_type       : 61 62
pointer_type         : 179
pointer_variable     : 228
procedure_and_function_declaration_part : 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
procedure_body       : 37 39
procedure_declaration : 35
procedure_heading    : 37 38 63
procedure_identification : 39
procedure_identifier : 52 87 88 126
procedure_parameter_section : 59
procedure_statement  : 83
program              : 0
program_heading      : 1
real_number          : 247
record_section       : 210 211
record_type          : 190
record_variable      : 116 117 170
record_variable_list : 115 117
referenced_variable  : 163
relational_operator  : 129
repeat_statement     : 96
repetitive_statement : 91
result_type          : 49 50
scale_factor         : 251 252 253 256 257 258
set                  : 139
set_type             : 191
sign                 : 130 261 273 274
simple_expression    : 128 129 129
simple_statement     : 78 80
simple_type          : 177 196
statement            : 76 77 77 98 100 101 106 107 107 112 115
statement_part       : 4
statement_sequence   : 46 94 99
string               : 138 277
string_character     : 268 269
string_character_list : 267 269
structured_statement : 79 81
structured_type      : 178
subrange_type        : 181
tag_field            : 213
term                 : 132 133 135
term_list            : 130 131 133
type                 : 30 34 197 200 202 212
type_definition      : 28 29
type_definition_list : 27 29
type_definition_part : 7 9 10 12 14 16 17 18
type_identifier      : 51 65 69 70 75 180 203 213
unpacked_conformant_array_schema : 68
unpacked_structured_type : 187 188
unsigned_digit_sequence : 260 261 262
upper_bound          : 184
value_parameter_section : 57
variable             : 85 136 227 229 230 231 232 240 241
variable_declaration : 32 33
variable_declaration_list : 31 33
variable_declaration_part : 8 10 11 12 15 16 18
variable_identifier  : 100 101 164
variable_list        : 241
variable_parameter_section : 58
variant              : 214 215
variant_list         : 213 215
variant_part         : 206 207 208 209
while_statement      : 95
with_statement       : 93

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_heading block DOT
    (2) program_heading -> . PROGRAM identifier SEMICOLON
    (3) program_heading -> . PROGRAM identifier LPAREN identifier_list RPAREN SEMICOLON

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_heading                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_heading . block DOT
    (4) block -> . declaration_part statement_part
    (5) declaration_part -> . label_declaration_part procedure_and_function_declaration_part
    (6) declaration_part -> . label_declaration_part constant_definition_part procedure_and_function_declaration_part
    (7) declaration_part -> . label_declaration_part type_definition_part procedure_and_function_declaration_part
    (8) declaration_part -> . label_declaration_part variable_declaration_part procedure_and_function_declaration_part
    (9) declaration_part -> . label_declaration_part constant_definition_part type_definition_part procedure_and_function_declaration_part
    (10) declaration_part -> . label_declaration_part constant_definition_part type_definition_part variable_declaration_part procedure_and_function_declaration_part
    (11) declaration_part -> . label_declaration_part constant_definition_part variable_declaration_part procedure_and_function_declaration_part
    (12) declaration_part -> . label_declaration_part type_definition_part variable_declaration_part procedure_and_function_declaration_part
    (13) declaration_part -> . constant_definition_part procedure_and_function_declaration_part
    (14) declaration_part -> . constant_definition_part type_definition_part procedure_and_function_declaration_part
    (15) declaration_part -> . constant_definition_part variable_declaration_part procedure_and_function_declaration_part
    (16) declaration_part -> . constant_definition_part type_definition_part variable_declaration_part procedure_and_function_declaration_part
    (17) declaration_part -> . type_definition_part procedure_and_function_declaration_part
    (18) declaration_part -> . type_definition_part variable_declaration_part procedure_and_function_declaration_part
    (19) declaration_part -> . procedure_and_function_declaration_part
    (20) label_declaration_part -> . LABEL label_list SEMICOLON
    (23) constant_definition_part -> . CONST constant_definition_list SEMICOLON
    (27) type_definition_part -> . TYPE type_definition_list SEMICOLON
    (35) procedure_and_function_declaration_part -> . procedure_declaration SEMICOLON
    (36) procedure_and_function_declaration_part -> . function_declaration SEMICOLON
    (37) procedure_declaration -> . procedure_heading SEMICOLON procedure_body
    (38) procedure_declaration -> . procedure_heading SEMICOLON directive
    (39) procedure_declaration -> . procedure_identification SEMICOLON procedure_body
    (41) function_declaration -> . function_heading SEMICOLON function_body
    (42) function_declaration -> . function_heading SEMICOLON directive
    (43) function_declaration -> . function_identification SEMICOLON function_body
    (47) procedure_heading -> . PROCEDURE identifier
    (48) procedure_heading -> . PROCEDURE identifier formal_parameter_list
    (52) procedure_identification -> . PROCEDURE procedure_identifier
    (49) function_heading -> . FUNCTION identifier COLON result_type
    (50) function_heading -> . FUNCTION identifier formal_parameter_list COLON result_type
    (53) function_identification -> . FUNCTION function_identifier

    LABEL           shift and go to state 10
    CONST           shift and go to state 11
    TYPE            shift and go to state 12
    PROCEDURE       shift and go to state 19
    FUNCTION        shift and go to state 20

    block                          shift and go to state 4
    declaration_part               shift and go to state 5
    label_declaration_part         shift and go to state 6
    procedure_and_function_declaration_part shift and go to state 7
    constant_definition_part       shift and go to state 8
    type_definition_part           shift and go to state 9
    procedure_declaration          shift and go to state 13
    function_declaration           shift and go to state 14
    procedure_heading              shift and go to state 15
    procedure_identification       shift and go to state 16
    function_heading               shift and go to state 17
    function_identification        shift and go to state 18

state 3

    (2) program_heading -> PROGRAM . identifier SEMICOLON
    (3) program_heading -> PROGRAM . identifier LPAREN identifier_list RPAREN SEMICOLON
    (226) identifier -> . ID

    ID              shift and go to state 22

    identifier                     shift and go to state 21

state 4

    (1) program -> program_heading block . DOT

    DOT             shift and go to state 23


state 5

    (4) block -> declaration_part . statement_part
    (46) statement_part -> . BEGIN statement_sequence END

    BEGIN           shift and go to state 25

    statement_part                 shift and go to state 24

state 6

    (5) declaration_part -> label_declaration_part . procedure_and_function_declaration_part
    (6) declaration_part -> label_declaration_part . constant_definition_part procedure_and_function_declaration_part
    (7) declaration_part -> label_declaration_part . type_definition_part procedure_and_function_declaration_part
    (8) declaration_part -> label_declaration_part . variable_declaration_part procedure_and_function_declaration_part
    (9) declaration_part -> label_declaration_part . constant_definition_part type_definition_part procedure_and_function_declaration_part
    (10) declaration_part -> label_declaration_part . constant_definition_part type_definition_part variable_declaration_part procedure_and_function_declaration_part
    (11) declaration_part -> label_declaration_part . constant_definition_part variable_declaration_part procedure_and_function_declaration_part
    (12) declaration_part -> label_declaration_part . type_definition_part variable_declaration_part procedure_and_function_declaration_part
    (35) procedure_and_function_declaration_part -> . procedure_declaration SEMICOLON
    (36) procedure_and_function_declaration_part -> . function_declaration SEMICOLON
    (23) constant_definition_part -> . CONST constant_definition_list SEMICOLON
    (27) type_definition_part -> . TYPE type_definition_list SEMICOLON
    (31) variable_declaration_part -> . VAR variable_declaration_list SEMICOLON
    (37) procedure_declaration -> . procedure_heading SEMICOLON procedure_body
    (38) procedure_declaration -> . procedure_heading SEMICOLON directive
    (39) procedure_declaration -> . procedure_identification SEMICOLON procedure_body
    (41) function_declaration -> . function_heading SEMICOLON function_body
    (42) function_declaration -> . function_heading SEMICOLON directive
    (43) function_declaration -> . function_identification SEMICOLON function_body
    (47) procedure_heading -> . PROCEDURE identifier
    (48) procedure_heading -> . PROCEDURE identifier formal_parameter_list
    (52) procedure_identification -> . PROCEDURE procedure_identifier
    (49) function_heading -> . FUNCTION identifier COLON result_type
    (50) function_heading -> . FUNCTION identifier formal_parameter_list COLON result_type
    (53) function_identification -> . FUNCTION function_identifier

    CONST           shift and go to state 11
    TYPE            shift and go to state 12
    VAR             shift and go to state 30
    PROCEDURE       shift and go to state 19
    FUNCTION        shift and go to state 20

    procedure_and_function_declaration_part shift and go to state 26
    constant_definition_part       shift and go to state 27
    type_definition_part           shift and go to state 28
    variable_declaration_part      shift and go to state 29
    procedure_declaration          shift and go to state 13
    function_declaration           shift and go to state 14
    procedure_heading              shift and go to state 15
    procedure_identification       shift and go to state 16
    function_heading               shift and go to state 17
    function_identification        shift and go to state 18

state 7

    (19) declaration_part -> procedure_and_function_declaration_part .

    BEGIN           reduce using rule 19 (declaration_part -> procedure_and_function_declaration_part .)


state 8

    (13) declaration_part -> constant_definition_part . procedure_and_function_declaration_part
    (14) declaration_part -> constant_definition_part . type_definition_part procedure_and_function_declaration_part
    (15) declaration_part -> constant_definition_part . variable_declaration_part procedure_and_function_declaration_part
    (16) declaration_part -> constant_definition_part . type_definition_part variable_declaration_part procedure_and_function_declaration_part
    (35) procedure_and_function_declaration_part -> . procedure_declaration SEMICOLON
    (36) procedure_and_function_declaration_part -> . function_declaration SEMICOLON
    (27) type_definition_part -> . TYPE type_definition_list SEMICOLON
    (31) variable_declaration_part -> . VAR variable_declaration_list SEMICOLON
    (37) procedure_declaration -> . procedure_heading SEMICOLON procedure_body
    (38) procedure_declaration -> . procedure_heading SEMICOLON directive
    (39) procedure_declaration -> . procedure_identification SEMICOLON procedure_body
    (41) function_declaration -> . function_heading SEMICOLON function_body
    (42) function_declaration -> . function_heading SEMICOLON directive
    (43) function_declaration -> . function_identification SEMICOLON function_body
    (47) procedure_heading -> . PROCEDURE identifier
    (48) procedure_heading -> . PROCEDURE identifier formal_parameter_list
    (52) procedure_identification -> . PROCEDURE procedure_identifier
    (49) function_heading -> . FUNCTION identifier COLON result_type
    (50) function_heading -> . FUNCTION identifier formal_parameter_list COLON result_type
    (53) function_identification -> . FUNCTION function_identifier

    TYPE            shift and go to state 12
    VAR             shift and go to state 30
    PROCEDURE       shift and go to state 19
    FUNCTION        shift and go to state 20

    procedure_and_function_declaration_part shift and go to state 31
    type_definition_part           shift and go to state 32
    variable_declaration_part      shift and go to state 33
    procedure_declaration          shift and go to state 13
    function_declaration           shift and go to state 14
    procedure_heading              shift and go to state 15
    procedure_identification       shift and go to state 16
    function_heading               shift and go to state 17
    function_identification        shift and go to state 18

state 9

    (17) declaration_part -> type_definition_part . procedure_and_function_declaration_part
    (18) declaration_part -> type_definition_part . variable_declaration_part procedure_and_function_declaration_part
    (35) procedure_and_function_declaration_part -> . procedure_declaration SEMICOLON
    (36) procedure_and_function_declaration_part -> . function_declaration SEMICOLON
    (31) variable_declaration_part -> . VAR variable_declaration_list SEMICOLON
    (37) procedure_declaration -> . procedure_heading SEMICOLON procedure_body
    (38) procedure_declaration -> . procedure_heading SEMICOLON directive
    (39) procedure_declaration -> . procedure_identification SEMICOLON procedure_body
    (41) function_declaration -> . function_heading SEMICOLON function_body
    (42) function_declaration -> . function_heading SEMICOLON directive
    (43) function_declaration -> . function_identification SEMICOLON function_body
    (47) procedure_heading -> . PROCEDURE identifier
    (48) procedure_heading -> . PROCEDURE identifier formal_parameter_list
    (52) procedure_identification -> . PROCEDURE procedure_identifier
    (49) function_heading -> . FUNCTION identifier COLON result_type
    (50) function_heading -> . FUNCTION identifier formal_parameter_list COLON result_type
    (53) function_identification -> . FUNCTION function_identifier

    VAR             shift and go to state 30
    PROCEDURE       shift and go to state 19
    FUNCTION        shift and go to state 20

    procedure_and_function_declaration_part shift and go to state 34
    variable_declaration_part      shift and go to state 35
    procedure_declaration          shift and go to state 13
    function_declaration           shift and go to state 14
    procedure_heading              shift and go to state 15
    procedure_identification       shift and go to state 16
    function_heading               shift and go to state 17
    function_identification        shift and go to state 18

state 10

    (20) label_declaration_part -> LABEL . label_list SEMICOLON
    (21) label_list -> . label
    (22) label_list -> . label_list COMMA label
    (272) label -> . integer_number
    (248) integer_number -> . digit_sequence
    (261) digit_sequence -> . sign unsigned_digit_sequence
    (262) digit_sequence -> . unsigned_digit_sequence
    (263) sign -> . PLUS
    (264) sign -> . MINUS
    (259) unsigned_digit_sequence -> . digit
    (260) unsigned_digit_sequence -> . unsigned_digit_sequence digit
    (266) digit -> . NUMBER
